--- a/currency_calculator.html
+++ b/currency_calculator.html
@@ -41,7 +41,7 @@
             </select>
             <p>    
             <label style="font-family: Times New Roman; font-size: 26px;" for="amount"><b>Кількість валюти:</b> </label>
-            <input type="text" id="name" name="name"><br></p>
+            <input type="text" id="name" name="amount"><br></p>
             <input style="font-family: Times New Roman; font-size: 16px;"type ="submit" id="button" value="Перерахувати">
             <p> 
             <label style="font-family: Times New Roman; font-size: 26px;" for="cost"><b>Вартість в  (PLN): </b></label>
